--- a/src/css/index.css
+++ b/src/css/index.css
@@ -36,25 +36,43 @@ ul{
 }
 .balance_title{
     background: steelblue;
-    text-align: right;
+    margin-right: 60px;
 }
 .title_lists div{
     display: inline;
     margin-left: 80px;
 }
+
+/*
 .transactions_type, .type_title{
     float: left;
 }
+*/
+.transactions_id, .id_title{
+    float: left;
+}
+.id_title{
+    padding: 0 20px;
+    background: coral;
+}
+.transactions_id{
+    margin-left: 100px;
+    margin-right: 50px;
+}
 .type_title{
-    padding: 0 60px;
+    padding: 0 40px;
     background: darkseagreen;
 }
 .amount_title{
-    padding: 0 60px;
+    padding: 0 40px;
     background: steelblue;
 }
+.transactions_amount{
+    margin-left: 150px;
+
+}
 .transaction_name_title{
-    padding: 0 60px;
+    padding: 0 40px;
     background: indianred;
 }
 .transaction_name_title, .transactions_name{
@@ -71,5 +89,7 @@ ul{
 
 .transaction_items div{
     display: inline;
-    margin-left: 100px;
+}
+.deleteAccount{
+    margin-left: 20px;
 }
